TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/038-multiple-errors.min




"
"
if then else endif;
while do done;
do
print 9ab;
read (1+2);


